<resources>
    <string name="app_name">Foodies Demo</string>
    <string name="weight">Вес</string>
    <string name="calories">Энерг. ценность</string>
    <string name="protein">Белки</string>
    <string name="fats">Жиры</string>
    <string name="carbs">Углеводы</string>
    <string name="apply">Готово</string>
    <string name="sale">Со скидкой</string>
    <string name="spicy">Острое</string>
    <string name="vegan">Без мяса</string>
    <string name="filter">Подобрать блюда</string>
    <string name="empty_cart">Пусто, выберите блюда в каталоге</string>
    <string name="empty_search_query">Введите название блюда, \nкоторое ищите</string>
    <string name="empty_catalog">Таких блюд нет, попробуйте изменить фильтры</string>
    <string name="search">Поиск</string>
    <string name="logo">Логотип</string>
    <string name="filter_">Фильтр каталога</string>
    <string name="add">Добавить</string>
    <string name="delete">Удалить</string>
    <string name="product">Продукт</string>
    <string name="tag">Тэг</string>
    <string name="cart">Корзина</string>
    <string name="back">Назад</string>
    <string name="find_hint">Найти блюдо</string>
    <string name="price_regular">&lt;b>%1$d ₽&lt;/b></string>
    <string name="price_sale">&lt;b>%1$d ₽&lt;/b> &lt;s>&lt;small>%2$d ₽&lt;/small>&lt;/s></string>
    <string name="product_weight">%1$d %2$s</string>
    <string name="loading">Загрузка…</string>
    <string name="_kkal">%1$s ккал</string>
    <string name="_gram">%1$s г</string>
    <string name="to_cart_for_rub">В корзину за %1$d ₽</string>
    <string name="empty_in_cart">В корзине пусто</string>
    <string name="nothing_was_found">Ничего не нашлось :(</string>
</resources>