<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/bw"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitleFilters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="@string/filter"
        android:textColor="?attr/text"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvVeganFilters"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:gravity="center"
            android:text="@string/vegan"
            android:textColor="?attr/text"
            android:textSize="16sp" />

        <View
            android:id="@+id/spacerFilters"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/checkboxVeganFilters"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:layout_marginEnd="24dp" />
    </LinearLayout>

    <View
        android:id="@+id/spacerFilters2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="?attr/separator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSpicyFilters"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:gravity="center"
            android:text="@string/spicy"
            android:textColor="?attr/text"
            android:textSize="16sp" />

        <View
            android:id="@+id/spacerFilters3"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/checkboxSpicyFilters"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:layout_marginEnd="24dp" />
    </LinearLayout>

    <View
        android:id="@+id/spacerFilters4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="?attr/separator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSaleFilters"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:gravity="center"
            android:text="@string/sale"
            android:textColor="?attr/text"
            android:textSize="16sp" />

        <View
            android:id="@+id/spacerFilters5"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/checkboxSaleFilters"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:layout_marginEnd="24dp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSaveFilters"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_button"
        android:backgroundTint="@color/primary"
        android:elevation="8dp"
        android:text="@string/apply"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cornerRadius="8dp" />

</LinearLayout>