<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bw"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvEmptyCatalog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/empty_catalog"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llTitleCatalog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnFilterCatalog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="16dp"
            android:src="@drawable/ic_filter"
            android:contentDescription="@string/filter_" />

        <ImageView
            android:id="@+id/ivTitleCatalog"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/app_logo_primary"
            android:contentDescription="@string/logo" />

        <ImageButton
            android:id="@+id/btnSearchCatalog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="16dp"
            android:src="@drawable/ic_search"
            android:contentDescription="@string/search" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/llCartCatalog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/bw"
        android:elevation="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_button"
            android:backgroundTint="@color/primary"
            android:orientation="horizontal">

            <View
                android:id="@+id/spacerCatalog1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tvCartCatalog"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_cart"
                app:drawableTint="@color/white"
                tools:text="2160 ₽" />

            <View
                android:id="@+id/spacerCatalog2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategoriesCatalog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llTitleCatalog"
        tools:listitem="@layout/element_category_catalog" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCatalog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:foregroundGravity="center"
        android:paddingBottom="56dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvCategoriesCatalog"
        tools:itemCount="16"
        tools:listitem="@layout/element_catalog"
        tools:spanCount="2" />

</androidx.constraintlayout.widget.ConstraintLayout>